simplify groups, better group routes.

--- a/todo.txt
+++ b/todo.txt
@@ -8,13 +8,12 @@
 / zusätzliche infos alles darstellen
 / facetten load more wie im alten system (default konfigurierbar mal 10 setzt)
 / resource list description (wenn vom api anzeigen, sonst fallback generische beschreibung)
+/ showcases
 
 - suche homepage auto complete
 - dataset search auto complete
-
 
 - daten api in modal overlay
 - showcase detail: url / related datasets
 
 - adobe plugin api "AppMeasurement"
-- showcases
