--- a/todo.txt
+++ b/todo.txt
@@ -9,11 +9,13 @@
 / facetten load more wie im alten system (default konfigurierbar mal 10 setzt)
 / resource list description (wenn vom api anzeigen, sonst fallback generische beschreibung)
 / showcases
+/ showcase detail: url
+
+- showcase detail: related datasets
 
 - suche homepage auto complete
 - dataset search auto complete
 
 - daten api in modal overlay
-- showcase detail: url / related datasets
 
 - adobe plugin api "AppMeasurement"
